--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="" href="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Orsol Filaj" />
   <meta name="description" content="create App Vite Yu-Gi-Oh" />
